[gd_scene load_steps=2 format=3 uid="uid://c2qnfq1l1arfh"]

[ext_resource type="Script" uid="uid://kajvglioakpl" path="res://src/ending.gd" id="1_o8i4m"]

[node name="Ending" type="Node2D"]
script = ExtResource("1_o8i4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_button_pressed"]
